# untitled

MACDONALD/: MACDONALD.sdf
MACDONALD/MACDONALD/Debug/: vc120.idb
untitled/: CMakeLists.txt  main.c
untitled/home/ubuntu/.ssh/: authorized_keys
untitled/unixProject/: CMakeLists.txt
untitled/unixProject/15109379/: copy1.c  exec.c  exit.c  fgets.c  fork2.c  getchar.c  gettimeofday.c  hello.c  hw1.c  image.c  jmp.c  my.sh  my.tar  readNwrite.c  sighandler.c  system.c  test.c  time.c  utime.c  val.c  wait1.c
untitled/unixProject/complete/: CMakeLists.txt  a.out  display.c  function.c  information.txt  main.h  mc  mcdonald.c  receipt.txt  shoppinglist.txt
untitled/unixProject/complete/home/ubuntu/: .bash_history  .bash_logout  CMakeLists.txt  main.c
untitled/unixProject/complete/home/ubuntu/.ssh/: authorized_keys
untitled/unixProject/complete/home/ubuntu/unixProject/15109379/: creatNwrite.c  stat.c  system.c  test.c  vfork.c  wait2.c
untitled/unixProject/complete/home/ubuntu/unixProject/kamcull/MACDONALD/MACDONALD/: MACDONALD.vcxproj.filters
untitled/unixProject/guswns/: .information.txt.swo  .information.txt.swp  Mcdonald.c  a.out  information.txt  time.c
untitled/unixProject/guswns/Mc/: Mcdonald.c  a.out  information.txt  initfile.c  intro.c  mcd
untitled/unixProject/guswns/Mc2/: Function.c  core  information.txt  main.c  main.h  menu.c  shoppingcart.txt
untitled/unixProject/guswns/Mc3/: delete.txt  delete2.txt  display.c  function.c  information.txt  main.h  mc
untitled/unixProject/kamcull/: Function.c  a.out  kam  main.c  main.h  menu.c
(+29 files in other folders)
