cmake_minimum_required(VERSION 3.15)
project(untitled C)

set(CMAKE_C_STANDARD 99)

add_executable(untitled main.c  unixProject/guswns/time.c unixProject/guswns/Mc/Mcdonald.c unixProject/guswns/Mc/intro.c unixProject/guswns/Mc/initfile.c unixProject/guswns/Mc3/main.h unixProject/guswns/Mc3/display.c unixProject/guswns/Mc3/function.c unixProject/guswns/Mc3/mcdonald.c)